made sure everything was in pixels, took out vw/vh to see if this is whats causing bug on mobile

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 
 #todoItems li {
   font-family: 'Roboto', sans-serif;
-  padding: 1vw 0 0.5vw 0vw;
+  padding:2px 0 6px 0;
   list-style: none;
   border-bottom: 0.5px solid lightgrey;
   display: flex;
